# digits

./: .gitignore  Pipfile  README.md  digits.py  ideas.txt  network.py  pyproject.toml  sweep.py  sweep.yaml  the plan.txt
.github/: dependabot.yml
networks/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  3.json  4.json  5.json  6.json  62.json  63.json  7.json  8.json  9.json
networks/current/: network.json
src/: digits.py  globals.py  gui.py  network.py  parser.py  preprocessor.py  train.py  utils.py
