[tool.poetry]
name = "digits"
version = "0.1.0"
description = ""
authors = ["Ishan Manchanda <ishanmanchanda70@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
Pillow = "^9.2.0"
scipy = "^1.9.1"
wandb = "^0.13.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
